# semantic-searching

./: .gitignore  LICENSE  README.md  Word2vec.ipynb  bert-search.ipynb  pyproject.toml  semantic_searching.ipynb
app/: app.py  components.py  schemas.py  utils.py
app/bert/: components.py  pipeline.py
app/engine/: base.py  bert.py  word2vec.py
app/llm/: components.py  pipeline.py
app/sbert/: pipeline.py
app/word2vec/: components.py  pipeline.py
scripts/: download_data.py  evaluate.py  evaluation.py
templates/: index.html  index.html.j2  search.html  search.html.j2
