[project]
name = "semantic-searching"
version = "0.1.0"
description = "Add your description here"
requires-python = "~=3.13.0"
dependencies = [
    "fastapi[standard]",
    "pydantic",
    "numpy",
    "polars",
    "txtai",
    "gensim",
    "scikit-learn",
    "tqdm",
    "torch",
    "haystack-ai",
    "sentence_transformers",
    "transformers==4.57.6",
    "python-multipart"
]

[dependency-groups]
build = [
    "click",
    "aiohttp[speedups]",
    "beautifulsoup4",
    "lxml"
]
dev = [
    "ipykernel>=7.2.0",
    "ipywidgets"
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cu130" }
]

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[build-system]
requires = [ "uv_build>=0.11.6,<0.12" ]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "app"
module-root = ""